# go2_main_ws

./: .gitignore  README.md
go2_frontier_explorer/: README.md  package.xml  setup.cfg  setup.py
go2_frontier_explorer/config/: frontier_explorer.yaml
go2_frontier_explorer/go2_frontier_explorer/: frontier_explorer.py
go2_frontier_explorer/launch/: frontier_explorer.launch.py
go2_nav_slam_sim/: README.md  package.xml  setup.cfg  setup.py
go2_nav_slam_sim/config/: go2_nav_localization.yaml  go2_nav_slam_sim.yaml
go2_nav_slam_sim/go2_nav_slam_sim/: ground_truth_to_tf.py
go2_nav_slam_sim/launch/: go2_nav_localization.launch.py  go2_nav_slam_sim.launch.py
go2_nav_slam_sim/rviz/: go2_nav_slam_sim.rviz
go2_real_bridge/: CMakeLists.txt  package.xml
go2_supervisor/: README.md  package.xml  setup.cfg  setup.py
go2_supervisor/go2_supervisor/: action_manager.py  body_pose_go2_bridge.py  body_pose_mux.py  cmd_vel_mux.py  go2_motion_tester.py  mode_manager.py  nav_request_manager.py
go2_supervisor/launch/: sim_full.launch.py  supervisor.launch.py
haptic_go2_teleop/: README.md  package.xml  setup.cfg  setup.py
haptic_go2_teleop/haptic_go2_teleop/: haptic_go2_teleop_position_node.py
haptic_go2_teleop/launch/: haptic_teleop.launch.py
myo_control/: README.md  package.xml  setup.cfg  setup.py
myo_control/launch/: myo_teleop.launch.py
myo_control/myo_control/: myo_emg_events_node.py  myo_emg_monitor_node.py  myo_reader_node.py  myo_to_cmdvel_node.py
