<?xml version="1.0"?>
<package format="3">
  <name>go2_frontier_explorer</name>
  <version>0.0.1</version>
  <description>Frontier exploration for Go2 using Nav2</description>

  <maintainer email="lorenzo@example.com">lorenzo</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>